--- a/index.html
+++ b/index.html
@@ -54,21 +54,62 @@
                     <button class="link-card">Day + 3</button>
                 </div>
                 <br>
+
+                <div class="forecast" id="forecast1">
+                    <img src="Feb01_grid.png">
+                    <article class="forecast-text">
+                        <p>Ice forecast that shows the spatial field of ice on February 1st.</p>
+                        <ul>
+                            <li><strong>Ice Conditions:</strong> Rapid ice formation along shorelines</li>
+                            <li><strong>Ice Thickness:</strong> Mild</li>
+                            <li><strong>Ice Movement:</strong> Drift ice mobile with west and northwest winds</li>
+                            <li><strong>USCG Operational Priority Areas:</strong> Track maintenance required in western Lake Erie, the Straits of Mackinac, and the Duluth-Superior approach as refreeze and brash buildup restrict movement. Escorts likely needed for bulk carriers transiting Toledo → Detroit River, Green Bay → Sturgeon Bay, and Apostle Islands → Whitefish Bay routes.</li>
+                            <li><strong>Shipping Guidance:</strong> Primary commercial lanes remain navigable but increasingly reliant on USCG-maintained tracks, especially in western Lake Erie, Saginaw Bay, and Green Bay. Offshore routing is preferred across Michigan-Huron corridors when drift ice encroaches on nearshore paths.</li>
+                            <li><strong>Extra:</strong> Western Lake Erie maintaining 7–9/10 coverage with new ridge development</li>
+                        </ul>
+                    </article>
+                </div>
                 <div class="forecast">
-                    <img class="forecast-img" src="Feb01_prediction.png" id="forecast1">
-                    <img class="forecast-img" src="Feb02_pred.png">
-                    <img class="forecast-img" src="Feb03_pred.png">
-                    <img class="forecast-img" src="Feb04_pred.png">
-                    
-                    <!--Forecast Description-->
-                    <ul>
-                        <li><strong>Ice Conditions:</strong> Rapid ice formation along shorelines</li>
-                        <li><strong>Ice Thickness:</strong> Increasing</li>
-                        <li><strong>Ice Movement:</strong> Drift ice mobile with west and northwest winds</li>
-                        <li><strong>USCG Operational Priority Areas:</strong> Track maintenance required in western Lake Erie, the Straits of Mackinac, and the Duluth-Superior approach as refreeze and brash buildup restrict movement. Escorts likely needed for bulk carriers transiting Toledo → Detroit River, Green Bay → Sturgeon Bay, and Apostle Islands → Whitefish Bay routes.</li>
-                        <li><strong>Shipping Guidance:</strong> Primary commercial lanes remain navigable but increasingly reliant on USCG-maintained tracks, especially in western Lake Erie, Saginaw Bay, and Green Bay. Offshore routing is preferred across Michigan-Huron corridors when drift ice encroaches on nearshore paths.</li>
-                        <li><strong>Extra:</strong> Western Lake Erie maintaining 7–9/10 coverage with new ridge development</li>
-                    </ul>
+                    <img src="Feb02_grid.png">
+                    <article class="forecast-text">
+                        <p>Ice forecast that shows the spatial field of ice on February 2nd.</p>
+                        <ul>
+                            <li><strong>Ice Conditions:</strong> Rapid ice formation along shorelines</li>
+                            <li><strong>Ice Thickness:</strong> Increasing</li>
+                            <li><strong>Ice Movement:</strong> Drift ice mobile with west and northwest winds</li>
+                            <li><strong>USCG Operational Priority Areas:</strong> Track maintenance required in western Lake Erie, the Straits of Mackinac, and the Duluth-Superior approach as refreeze and brash buildup restrict movement. Escorts likely needed for bulk carriers transiting Toledo → Detroit River, Green Bay → Sturgeon Bay, and Apostle Islands → Whitefish Bay routes.</li>
+                            <li><strong>Shipping Guidance:</strong> Primary commercial lanes remain navigable but increasingly reliant on USCG-maintained tracks, especially in western Lake Erie, Saginaw Bay, and Green Bay. Offshore routing is preferred across Michigan-Huron corridors when drift ice encroaches on nearshore paths.</li>
+                            <li><strong>Extra:</strong> Lake Ontario temperatures cooling</li>
+                        </ul>
+                    </article>
+                </div>
+                <div class="forecast">
+                    <img src="Feb03_grid.png">
+                    <article class="forecast-text">
+                        <p>Ice forecast that shows the spatial field of ice on February 3rd.</p>
+                        <ul>
+                            <li><strong>Ice Conditions:</strong> Rapid ice formation along shorelines</li>
+                            <li><strong>Ice Thickness:</strong> Increasing</li>
+                            <li><strong>Ice Movement:</strong> Drift ice mobile with west and northwest winds</li>
+                            <li><strong>USCG Operational Priority Areas:</strong> Track maintenance required in western Lake Erie, the Straits of Mackinac, and the Duluth-Superior approach as refreeze and brash buildup restrict movement. Escorts likely needed for bulk carriers transiting Toledo → Detroit River, Green Bay → Sturgeon Bay, and Apostle Islands → Whitefish Bay routes.</li>
+                            <li><strong>Shipping Guidance:</strong> Primary commercial lanes remain navigable but increasingly reliant on USCG-maintained tracks, especially in western Lake Erie, Saginaw Bay, and Green Bay. Offshore routing is preferred across Michigan-Huron corridors when drift ice encroaches on nearshore paths.</li>
+                            <li><strong>Extra:</strong> Western Lake Erie still maintaining 7–9/10 coverage</li>
+                        </ul>
+                    </article>
+                </div>
+                <div class="forecast">
+                    <img src="Feb04_grid.png">
+                    <article class="forecast-text">
+                        <p>Ice forecast that shows the spatial field of ice on February 4th.</p>
+                        <ul>
+                            <li><strong>Ice Conditions:</strong> Rapid ice formation along shorelines</li>
+                            <li><strong>Ice Thickness:</strong> Increasing</li>
+                            <li><strong>Ice Movement:</strong> Drift ice mobile with west and northwest winds</li>
+                            <li><strong>USCG Operational Priority Areas:</strong> Track maintenance required in western Lake Erie, the Straits of Mackinac, and the Duluth-Superior approach as refreeze and brash buildup restrict movement. Escorts likely needed for bulk carriers transiting Toledo → Detroit River, Green Bay → Sturgeon Bay, and Apostle Islands → Whitefish Bay routes.</li>
+                            <li><strong>Shipping Guidance:</strong> Primary commercial lanes remain navigable but increasingly reliant on USCG-maintained tracks, especially in western Lake Erie, Saginaw Bay, and Green Bay. Offshore routing is preferred across Michigan-Huron corridors when drift ice encroaches on nearshore paths.</li>
+                            <li><strong>Extra:</strong> Lake Huron ice coverage noticably increasing, with new ridge development</li>
+                        </ul>
+                    </article>
                 </div>
             </div>
 
@@ -76,7 +117,7 @@
             <div class="card">
                 <h2>Forecast Timelapse</h2>
                 <div class="link-grid">
-                    <img src="feb_forecast_gif.gif" alt="Forecast Timelapse" style="justify-self: center; width: 100%;">
+                    <img src="forecast_hd.gif" alt="Forecast Timelapse" style="justify-self: center; width: 100%;">
                 </div>
                 <p>*Gif may timeout, refresh page to restart</p>
             </div>
