video link added

--- a/data-science.html
+++ b/data-science.html
@@ -63,7 +63,7 @@
             <div class="card">
                 <h2>Demo Video</h2>
                 <div class="link-grid">
-                    <a href="https://youtube.com" class="link-card" target="_blank" style="text-align: center;">
+                    <a href="https://youtu.be/dxxCCT17vkI" class="link-card" target="_blank" style="text-align: center;">
                         <h4>💻 Youtube Video Link 💻</h4>
                         <p></p>
                     </a>
